# SIRF-Contribs

./: .gitignore  README.md  main.py  pyproject.toml  rdp.py
src/Python/sirf/contrib/LBFGSBPC/: LBFGSBPC.py
src/Python/sirf/contrib/MaGeZ/: README.md  __init__.py  environment.yml  main.py  rdp.py
src/notebooks/: StarVibe_MCIR.ipynb  StarVibe_MCIR.py
